Fixed the problem of blurry pictures

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,20 @@
 .card-img-top {
-    height: 200px;
+    width: 100%;
+    height: 100%;
     /* is used to ensure that the image fills the container and is cropped to fit the available space. */
     object-fit: cover;
+}
+
+.card {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
 }
 
 /* Add margin-top to main content to account for fixed navbar */
 main {
     margin-top: 100px;
-    margin-bottom: 100px;
+    /* margin-bottom: 50px; */
 }
